Release v1.1.0 (#76)
* chore: increment project version from 0.0.16 to 0.0.17

* feat: add new fields for phones

* fix: change PRICE_MAX

* refactor: add phonecharacteristics variable before phone creation

* feat: implement filtering and sorting for phones

* chore: increment project version from 0.0.18 to 0.0.19

* refactor: change name of method buildSpecification() -> build()

* feature: add rememberMeRefreshTokenExpiration

* feat: add remember me flag during login

* tests: update tests for remember me flag

* chore: increment project version from 0.0.22 to 0.0.23

* refactor: move UserLoginRequestDto and UserRegisterRequestDto to dto.auth package

* feat: implement forgot password logic

* Feature/ntt 40/admin shell (#42)

* add admin api entry point

* feat(admin): add admin product routes and admin order routing skeleton

* feat(security): restrict admin api to admin role

* build(test): configure maven annotation processing and add admin controller coverage

* fix: add docker-java.properties to fix Testcontainers compatibility with new Docker Desktop

* fix: change {} into

* feat: add new entity for reset token

* feat: add password reset token validation via database

* test: update password reset tests

* refactor: use Instant instead of LocalDateTime for token timestamps

* fix: hash reset token before persisting and persist token on sendResetLink

* refactor: add @Transactional to password reset methods

* test: update tests

* test: check CI pipeline

* ci: add GitHub Actions workflow

* ci: fix workflows directory name

* ci: remove temporary push trigger for test branch

* [BE] Implement admin product catalog read endpoints (#44)

* feat(admin): add admin product read dto contracts

* feat(admin): implement admin product query service and specification

* feat(admin): update admin product read endpoints

* test(admin): cover admin product read endpoints

* refactor(admin): remove legacy helper and hide specification internals

* fix: update valida