@@ -1,13 +1,13 @@
 package com.challengeteam.shop.service.impl;
 
-import com.challengeteam.shop.dto.pagination.PhoneFilterDto;
-import com.challengeteam.shop.dto.phone.PhoneCreateRequestDto;
-import com.challengeteam.shop.dto.phone.PhoneUpdateRequestDto;
+import com.challengeteam.shop.dto.pagination.paginationRequest.PhoneFilterDto;
+import com.challengeteam.shop.dto.phone.request.PhoneCreateRequestDto;
+import com.challengeteam.shop.dto.phone.request.PhoneUpdateRequestDto;
 import com.challengeteam.shop.entity.image.Image;
 import com.challengeteam.shop.entity.image.MIMEType;
-import com.challengeteam.shop.entity.phone.Phone;
-import com.challengeteam.shop.entity.phone.PhoneCharacteristics;
+import com.challengeteam.shop.entity.phone.*;
 import com.challengeteam.shop.exceptionHandling.exception.CriticalSystemException;
+import com.challengeteam.shop.exceptionHandling.exception.InvalidAPIRequestException;
 import com.challengeteam.shop.exceptionHandling.exception.ResourceNotFoundException;
 import com.challengeteam.shop.persistence.repository.ImageRepository;
 import com.challengeteam.shop.persistence.repository.PhoneRepository;
@@ -31,20 +31,26 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.LongStream;
 
 import static com.challengeteam.shop.service.impl.PhoneServiceImplTest.TestResources.*;
-import static org.assertj.core.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
 
 @ExtendWith(MockitoExtension.class)
 class PhoneServiceImplTest {
-    @Mock private PhoneRepository phoneRepository;
-    @Mock private PhoneMerger phoneMerger;
-    @Mock private ImageService imageService;
-    @Mock private ImageRepository imageRepository;
-    @InjectMocks private PhoneServiceImpl phoneService;
+    @Mock
+    private PhoneRepository phoneRepository;
+    @Mock
+    private PhoneMerger phoneMerger;
+    @Mock
+    private ImageService imageService;
+    @Mock
+    private ImageRepository imageRepository;
+    @InjectMocks
+    private PhoneServiceImpl phoneService;
 
     @Nested
     class GetAllPhonesTest {
@@ -63,6 +69,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -79,6 +87,7 @@ class PhoneServiceImplTest {
             ArgumentCaptor<Specification<Phone>> specCaptor = ArgumentCaptor.forClass(Specification.class);
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(specCaptor.capture(), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
 
             assertThat(specCaptor.getValue()).isNotNull();
             assertThat(pageableCaptor.getValue()).isNotNull();
@@ -112,6 +121,7 @@ class PhoneServiceImplTest {
             ArgumentCaptor<Specification<Phone>> specCaptor = ArgumentCaptor.forClass(Specification.class);
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(specCaptor.capture(), pageableCaptor.capture());
+            Mockito.verify(phoneRepository, Mockito.never()).findAllWithImages(any());
 
             assertThat(specCaptor.getValue()).isNotNull();
             assertThat(pageableCaptor.getValue()).isNotNull();
@@ -131,6 +141,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -145,6 +157,7 @@ class PhoneServiceImplTest {
             ArgumentCaptor<Specification<Phone>> specCaptor = ArgumentCaptor.forClass(Specification.class);
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(specCaptor.capture(), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
 
             assertThat(specCaptor.getValue()).isNotNull();
             assertThat(pageableCaptor.getValue()).isNotNull();
@@ -164,6 +177,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -178,6 +193,7 @@ class PhoneServiceImplTest {
             ArgumentCaptor<Specification<Phone>> specCaptor = ArgumentCaptor.forClass(Specification.class);
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(specCaptor.capture(), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
 
             assertThat(specCaptor.getValue()).isNotNull();
             assertThat(pageableCaptor.getValue()).isNotNull();
@@ -197,6 +213,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             phoneService.getPhones(page, size, filterDto);
@@ -205,6 +223,7 @@ class PhoneServiceImplTest {
             ArgumentCaptor<Specification<Phone>> specCaptor = ArgumentCaptor.forClass(Specification.class);
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(specCaptor.capture(), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
 
             Pageable capturedPageable = pageableCaptor.getValue();
             assertThat(capturedPageable.getPageNumber()).isEqualTo(page);
@@ -225,6 +244,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -235,6 +256,7 @@ class PhoneServiceImplTest {
 
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(any(Specification.class), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
             Pageable capturedPageable = pageableCaptor.getValue();
 
             assertThat(capturedPageable.getSort()).isEqualTo(expectedSort);
@@ -254,6 +276,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -263,6 +287,7 @@ class PhoneServiceImplTest {
 
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(any(Specification.class), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
             Pageable capturedPageable = pageableCaptor.getValue();
 
             assertThat(capturedPageable.getSort()).isEqualTo(expectedSort);
@@ -282,6 +307,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -291,6 +318,7 @@ class PhoneServiceImplTest {
 
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(any(Specification.class), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
             Pageable capturedPageable = pageableCaptor.getValue();
 
             assertThat(capturedPageable.getSort()).isEqualTo(expectedSort);
@@ -310,6 +338,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -319,6 +349,7 @@ class PhoneServiceImplTest {
 
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(any(Specification.class), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
             Pageable capturedPageable = pageableCaptor.getValue();
 
             assertThat(capturedPageable.getSort()).isEqualTo(expectedSort);
@@ -338,6 +369,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -347,6 +380,7 @@ class PhoneServiceImplTest {
 
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(any(Specification.class), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
             Pageable capturedPageable = pageableCaptor.getValue();
 
             assertThat(capturedPageable.getSort()).isEqualTo(expectedSort);
@@ -366,6 +400,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -374,6 +410,7 @@ class PhoneServiceImplTest {
             assertThat(result).isNotNull();
             assertThat(result.getContent()).hasSize(3);
             Mockito.verify(phoneRepository).findAll(any(Specification.class), any(Pageable.class));
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
         }
 
         @Test
@@ -390,6 +427,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -398,6 +437,7 @@ class PhoneServiceImplTest {
             assertThat(result).isNotNull();
             assertThat(result.getContent()).hasSize(5);
             Mockito.verify(phoneRepository).findAll(any(Specification.class), any(Pageable.class));
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
         }
 
         @Test
@@ -414,6 +454,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -421,6 +463,7 @@ class PhoneServiceImplTest {
             // then
             assertThat(result).isNotNull();
             Mockito.verify(phoneRepository).findAll(any(Specification.class), any(Pageable.class));
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
         }
 
         @Test
@@ -437,6 +480,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -444,6 +489,7 @@ class PhoneServiceImplTest {
             // then
             assertThat(result).isNotNull();
             Mockito.verify(phoneRepository).findAll(any(Specification.class), any(Pageable.class));
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
         }
 
         @Test
@@ -460,6 +506,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findAll(any(Specification.class), any(Pageable.class)))
                     .thenReturn(expected);
+            Mockito.when(phoneRepository.findAllWithImages(expected.getContent()))
+                    .thenReturn(expected.getContent());
 
             // when
             Page<Phone> result = phoneService.getPhones(page, size, filterDto);
@@ -470,6 +518,7 @@ class PhoneServiceImplTest {
 
             ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
             Mockito.verify(phoneRepository).findAll(any(Specification.class), pageableCaptor.capture());
+            Mockito.verify(phoneRepository).findAllWithImages(expected.getContent());
             Pageable capturedPageable = pageableCaptor.getValue();
 
             assertThat(capturedPageable.getSort()).isEqualTo(expectedSort);
@@ -579,6 +628,9 @@ class PhoneServiceImplTest {
             assertThat(phoneBeforeSave.getPrice()).isEqualTo(dto.price());
             assertThat(phoneBeforeSave.getBrand()).isEqualTo(dto.brand());
             assertThat(phoneBeforeSave.getReleaseYear()).isEqualTo(dto.releaseYear());
+            assertThat(phoneBeforeSave.getSku()).isEqualTo(dto.sku());
+            assertThat(phoneBeforeSave.getStock()).isEqualTo(dto.stock());
+            assertThat(phoneBeforeSave.getStatus()).isEqualTo(ProductStatus.IN_STOCK);
 
             // capture Image
             ArgumentCaptor<Image> imageCaptor = ArgumentCaptor.forClass(Image.class);
@@ -616,6 +668,59 @@ class PhoneServiceImplTest {
             assertThat(forSave.getPrice()).isEqualTo(dto.price());
             assertThat(forSave.getBrand()).isEqualTo(PHONE_BRAND);
             assertThat(forSave.getReleaseYear()).isEqualTo(dto.releaseYear());
+            assertThat(forSave.getSku()).isEqualTo(PHONE_SKU);
+            assertThat(forSave.getStock()).isEqualTo(dto.stock());
+            assertThat(forSave.getStatus()).isEqualTo(ProductStatus.IN_STOCK);
+        }
+
+        @Test
+        void whenCreateRequestStatusDoesNotMatchStock_thenDeriveStatusFromStock() {
+            // given
+            PhoneCreateRequestDto dto = new PhoneCreateRequestDto(
+                    PHONE_NAME,
+                    PHONE_DESCRIPTION,
+                    PHONE_PRICE,
+                    PHONE_BRAND,
+                    PHONE_RELEASE_YEAR,
+                    PHONE_SKU,
+                    5,
+                    ProductStatus.IN_STOCK,
+                    PHONE_CPU,
+                    PHONE_CORES_NUMBER,
+                    PHONE_SCREEN_SIZE,
+                    PHONE_FRONT_CAMERA,
+                    PHONE_MAIN_CAMERA,
+                    PHONE_BATTERY_CAPACITY,
+                    NEW_COLORS,
+                    NEW_STORAGE_CAPACITY
+            );
+
+            Mockito.when(phoneRepository.save(any(Phone.class)))
+                    .thenReturn(buildPhone(PHONE_ID));
+
+            // when
+            phoneService.create(dto, List.of());
+
+            // then
+            ArgumentCaptor<Phone> captor = ArgumentCaptor.forClass(Phone.class);
+            Mockito.verify(phoneRepository).save(captor.capture());
+
+            assertThat(captor.getValue().getStock()).isEqualTo(5);
+            assertThat(captor.getValue().getStatus()).isEqualTo(ProductStatus.LOW_STOCK);
+        }
+
+        @Test
+        void whenSkuAlreadyExists_thenThrowInvalidApiRequestException() {
+            // given
+            PhoneCreateRequestDto dto = buildPhoneCreateRequestDto();
+
+            Mockito.when(phoneRepository.existsBySku(PHONE_SKU))
+                    .thenReturn(true);
+
+            // when + then
+            assertThatThrownBy(() -> phoneService.create(dto, List.of()))
+                    .isInstanceOf(InvalidAPIRequestException.class)
+                    .hasMessage("Phone with sku '%s' already exists".formatted(PHONE_SKU));
         }
 
         @Test
@@ -646,6 +751,8 @@ class PhoneServiceImplTest {
             // mockito
             Mockito.when(phoneRepository.findById(PHONE_ID))
                     .thenReturn(Optional.of(phone));
+            Mockito.when(phoneRepository.existsBySkuAndIdNot(NEW_PHONE_SKU, PHONE_ID))
+                    .thenReturn(false);
 
             // when
             phoneService.update(PHONE_ID, dto);
@@ -654,6 +761,28 @@ class PhoneServiceImplTest {
             Mockito.verify(phoneRepository).findById(PHONE_ID);
             Mockito.verify(phoneMerger).mergePhone(phone, dto);
             Mockito.verify(phoneRepository).save(phone);
+        }
+
+        @Test
+        void whenSkuAlreadyExistsForAnotherPhone_thenThrowInvalidApiRequestException() {
+            // given
+            Phone phone = buildPhone(PHONE_ID);
+            PhoneUpdateRequestDto dto = buildPhoneUpdateRequestDto();
+
+            Mockito.when(phoneRepository.findById(PHONE_ID))
+                    .thenReturn(Optional.of(phone));
+            Mockito.when(phoneRepository.existsBySkuAndIdNot(NEW_PHONE_SKU, PHONE_ID))
+                    .thenReturn(true);
+
+            // when + then
+            assertThatThrownBy(() -> phoneService.update(PHONE_ID, dto))
+                    .isInstanceOf(InvalidAPIRequestException.class)
+                    .hasMessage("Phone with sku '%s' already exists".formatted(NEW_PHONE_SKU));
+
+            Mockito.verify(phoneRepository).findById(PHONE_ID);
+            Mockito.verify(phoneRepository).existsBySkuAndIdNot(NEW_PHONE_SKU, PHONE_ID);
+            Mockito.verify(phoneMerger, Mockito.never()).mergePhone(any(), any());
+            Mockito.verify(phoneRepository, Mockito.never()).save(any());
         }
 
         @Test
@@ -670,7 +799,7 @@ class PhoneServiceImplTest {
         @Test
         void whenIdIsNull_thenThrowNullPointerException() {
             // when + then
-            assertThatThrownBy(() -> phoneService.update(null,  buildPhoneUpdateRequestDto()))
+            assertThatThrownBy(() -> phoneService.update(null, buildPhoneUpdateRequestDto()))
                     .isInstanceOf(NullPointerException.class);
         }
 
@@ -755,7 +884,7 @@ class PhoneServiceImplTest {
         @Test
         void whenParameterNewImageIsNull_thenThrowException() {
             // when + then
-            assertThatThrownBy(() -> phoneService.addImageToPhone(PHONE_ID,null))
+            assertThatThrownBy(() -> phoneService.addImageToPhone(PHONE_ID, null))
                     .isInstanceOf(NullPointerException.class);
         }
 
@@ -777,7 +906,7 @@ class PhoneServiceImplTest {
 
             // then
             assertThat(result.size()).isEqualTo(1);
-            assertThat(result.get(0)).isEqualTo(buildImage());
+            assertThat(result.getFirst()).isEqualTo(buildImage());
         }
 
         @Test
@@ -820,7 +949,7 @@ class PhoneServiceImplTest {
         void whenExistsButDoesntContainImage_thenThrowException() {
             // mockito
             Mockito.when(phoneRepository.existsPhoneByIdWithImage(PHONE_ID, IMAGE_ID))
-                        .thenReturn(false);
+                    .thenReturn(false);
 
             // when + then
             assertThatThrownBy(() -> phoneService.deletePhonesImageById(PHONE_ID, IMAGE_ID))
@@ -882,24 +1011,39 @@ class PhoneServiceImplTest {
         public static final BigDecimal PHONE_PRICE = new BigDecimal("1000.0");
         public static final String PHONE_BRAND = "phone_brand";
         public static final int PHONE_RELEASE_YEAR = 2020;
+        public static final String PHONE_SKU = "PHONE-SKU-001";
+        public static final Integer PHONE_STOCK = 25;
+        public static final ProductStatus PHONE_STATUS = ProductStatus.IN_STOCK;
         public static final String PHONE_CPU = "Snapdragon 8 Gen 2";
         public static final Integer PHONE_CORES_NUMBER = 8;
         public static final String PHONE_SCREEN_SIZE = "6.5\"";
         public static final String PHONE_FRONT_CAMERA = "12 MP";
         public static final String PHONE_MAIN_CAMERA = "50-12 MP";
         public static final String PHONE_BATTERY_CAPACITY = "4500 mAh";
+        public static final Set<PhoneColor> COLORS = Set.of(
+                PhoneColor.RED, PhoneColor.GREEN, PhoneColor.YELLOW);
+        public static final Set<StorageCapacity> STORAGE_CAPACITY = Set.of(
+                StorageCapacity.CAPACITY_512GB, StorageCapacity.CAPACITY_1TB, StorageCapacity.CAPACITY_2TB);
 
         public static final String NEW_PHONE_NAME = "new_phone_name";
         public static final String NEW_PHONE_DESCRIPTION = "New phone description.";
         public static final BigDecimal NEW_PHONE_PRICE = new BigDecimal("2000.0");
         public static final String NEW_PHONE_BRAND = "new_phone_brand";
         public static final int NEW_PHONE_RELEASE_YEAR = 2021;
+        public static final String NEW_PHONE_SKU = "NEW-PHONE-SKU-001";
+        public static final Integer NEW_PHONE_STOCK = 8;
+        public static final ProductStatus NEW_PHONE_STATUS = ProductStatus.LOW_STOCK;
         public static final String NEW_PHONE_CPU = "Snapdragon 8 Gen 3";
         public static final Integer NEW_PHONE_CORES_NUMBER = 12;
         public static final String NEW_PHONE_SCREEN_SIZE = "6.7\"";
         public static final String NEW_PHONE_FRONT_CAMERA = "16 MP";
         public static final String NEW_PHONE_MAIN_CAMERA = "50-50-12 MP";
         public static final String NEW_PHONE_BATTERY_CAPACITY = "5000 mAh";
+
+        public static final Set<PhoneColor> NEW_COLORS = Set.of(
+                PhoneColor.BLACK, PhoneColor.WHITE, PhoneColor.BLUE);
+        public static final Set<StorageCapacity> NEW_STORAGE_CAPACITY = Set.of(
+                StorageCapacity.CAPACITY_64GB, StorageCapacity.CAPACITY_128GB, StorageCapacity.CAPACITY_256GB, StorageCapacity.CAPACITY_512GB);
 
 
         static List<Phone> buildPhonesFromTo(long from, long to) {
@@ -915,6 +1059,9 @@ class PhoneServiceImplTest {
                     .price(PHONE_PRICE.add(new BigDecimal(id)))
                     .brand(PHONE_BRAND + id)
                     .releaseYear(PHONE_RELEASE_YEAR)
+                    .sku(PHONE_SKU + "-" + id)
+                    .stock(PHONE_STOCK)
+                    .status(PHONE_STATUS)
                     .phoneCharacteristics(
                             PhoneCharacteristics.builder()
                                     .cpu(PHONE_CPU)
@@ -939,12 +1086,17 @@ class PhoneServiceImplTest {
                     PHONE_PRICE,
                     PHONE_BRAND,
                     PHONE_RELEASE_YEAR,
+                    PHONE_SKU,
+                    PHONE_STOCK,
+                    PHONE_STATUS,
                     PHONE_CPU,
                     PHONE_CORES_NUMBER,
                     PHONE_SCREEN_SIZE,
                     PHONE_FRONT_CAMERA,
                     PHONE_MAIN_CAMERA,
-                    PHONE_BATTERY_CAPACITY
+                    PHONE_BATTERY_CAPACITY,
+                    NEW_COLORS,
+                    NEW_STORAGE_CAPACITY
             );
         }
 
@@ -955,12 +1107,18 @@ class PhoneServiceImplTest {
                     PHONE_PRICE,
                     "  " + PHONE_BRAND + "  ",
                     PHONE_RELEASE_YEAR,
+                    "  " + PHONE_SKU + "  ",
+                    PHONE_STOCK,
+                    PHONE_STATUS,
                     "  " + PHONE_CPU + "  ",
                     PHONE_CORES_NUMBER,
                     "  " + PHONE_SCREEN_SIZE + "  ",
                     "  " + PHONE_FRONT_CAMERA + "  ",
                     "  " + PHONE_MAIN_CAMERA + "  ",
-                    "  " + PHONE_BATTERY_CAPACITY + "  "
+                    "  " + PHONE_BATTERY_CAPACITY + "  ",
+                    COLORS,
+                    STORAGE_CAPACITY
+
             );
         }
 
@@ -971,12 +1129,17 @@ class PhoneServiceImplTest {
                     NEW_PHONE_PRICE,
                     NEW_PHONE_BRAND,
                     NEW_PHONE_RELEASE_YEAR,
+                    NEW_PHONE_SKU,
+                    NEW_PHONE_STOCK,
+                    NEW_PHONE_STATUS,
                     NEW_PHONE_CPU,
                     NEW_PHONE_CORES_NUMBER,
                     NEW_PHONE_SCREEN_SIZE,
                     NEW_PHONE_FRONT_CAMERA,
                     NEW_PHONE_MAIN_CAMERA,
-                    NEW_PHONE_BATTERY_CAPACITY
+                    NEW_PHONE_BATTERY_CAPACITY,
+                    NEW_COLORS,
+                    NEW_STORAGE_CAPACITY
             );
         }
 
